# ore-pool

./: Cargo.toml  README.md  docker-compose.yml
admin/: Cargo.toml
admin/src/: error.rs  get_or_create.rs  init.rs  main.rs  member_account.rs  nonce_account.rs  open_stake.rs  pool_account.rs  proof_account.rs
api/: Cargo.toml
api/src/: consts.rs  error.rs  event.rs  instruction.rs  lib.rs  loaders.rs  sdk.rs
api/src/state/: batch.rs  member.rs  migration.rs  mod.rs  participant.rs  pool.rs  rewards.rs  share.rs  submission.rs
init-db/: 01_setup.sql
migration/: Cargo.toml
migration/src/: client.rs  error.rs  main.rs
program/: Cargo.toml
program/src/: attribute.rs  certify.rs  claim.rs  commit.rs  increment_share_rewards.rs  increment_total_rewards.rs  initialize.rs  join.rs  kick.rs  launch.rs  lib.rs  migrate_member_balance.rs  migrate_pool.rs  migrate_quick.rs  open.rs  open_share.rs  open_share_rewards.rs  open_stake.rs  open_total_rewards.rs  stake.rs  submit.rs  unstake.rs
server/: .env.example  Cargo.toml  README.md
server/src/: aggregator.rs  contribute.rs  contributions.rs  contributor.rs  database.rs  error.rs  handlers.rs  main.rs  miner.rs  operator.rs  staker.rs  tx.rs  utils.rs  webhook.rs
server/src/tx/: mod.rs  submit.rs  validate.rs
types/: Cargo.toml
types/src/: lib.rs
