[workspace]
resolver = "2"
members = ["admin", "api", "program", "server", "types", "migration"]

[workspace.package]
version = "0.2.2"
edition = "2021"
license = "Apache-2.0"
homepage = "https://ore.supply"
documentation = "https://ore.supply"
repository = "https://github.com/regolith-labs/ore-pool"
readme = "./README.md"
keywords = ["solana", "crypto", "mining"]

[workspace.dependencies]
actix-cors = "0.7"
actix-web = "4.9"
array-const-fn-init = "0.1.1"
base64 = "0.22.1"
bincode = "1.3.3"
bytemuck = "1.14.3"
cached = "0.54.0"
const-crypto = "0.1.0"
deadpool-postgres = "0.12"
drillx = { features = ["solana"], version = "2.0.1" }
env_logger = "0.11"
futures = "0.3"
futures-channel = "0.3"
futures-util = "0.3"
log = "0.4"
mpl-token-metadata = "4.1.2"
num_enum = "0.7.2"
ore-api = { path = "../ore/api", version = "3.0" }
ore-boost-api = { path = "../ore-boost/api", version = "1.0" }
ore-pool-api = { path = "api", version = "0.2" }
ore-pool-types = { path = "types", version = "0.2" }
postgres-types = { featuers = ["derive"], version = "0.2.6" }
reqwest = { version = "0.12", features = ["json"] }
serde = { features = ["derive"], version = "1.0" }
serde_json = "1.0"
sha3 = "0.10"
solana-account-decoder = "^1.18"
solana-client = "^1.18"
solana-program = "^1.18"
solana-sdk = "^1.18"
solana-transaction-status = "^1.18"
spl-token = { features = ["no-entrypoint"], version = "^4" }
spl-associated-token-account = { features = [
  "no-entrypoint",
], version = "^2.3" }
static_assertions = "1.1.0"
steel = { features = ["spl"], version = "2.0" }
thiserror = "1.0.57"
tokio = "1.39"
tokio-postgres = "0.7"

[patch.crates-io]
ore-api = { path = "../ore/api" }
ore-boost-api = { path = "../ore-boost/api" }
