[workspace]
resolver = "2"
members = ["admin", "api", "program", "server", "types"]

[workspace.package]
version = "1.7.0-beta"
edition = "2021"
license = "Apache-2.0"
homepage = "https://ore.supply"
documentation = "https://docs.rs/ore-pool-api/latest/ore_pool_api/"
repository = "https://github.com/regolith-labs/ore-pool"
readme = "./README.md"
keywords = ["solana", "crypto", "mining"]

[workspace.dependencies]
actix-cors = "0.7"
actix-web = "4.9"
array-const-fn-init = "0.1.1"
base64 = "0.22.1"
bincode = "1.3.3"
bytemuck = "1.14.3"
bytemuck_derive = "1.7.0"
cached = "0.54.0"
const-crypto = "0.1.0"
deadpool-postgres = "0.12"
drillx = { features = ["solana"], version = "2.2" }
env_logger = "0.11"
futures = "0.3"
futures-channel = "0.3"
futures-util = "0.3"
log = "0.4"
num_enum = "0.7.2"
ore-api = "3.6.0-beta"
ore-boost-api = "4.0.0-beta"
ore-pool-api = { path = "api" }
ore-pool-types = { path = "types" }
postgres-types = "0.2.6"
reqwest = { version = "0.12", features = ["json"] }
serde = { features = ["derive"], version = "1.0" }
serde_json = "1.0"
sha3 = "0.10"
solana-account-decoder = "=2.1"
solana-client = "=2.1"
solana-program = "=2.1"
solana-sdk = "=2.1"
solana-transaction-status = "=2.1"
spl-token = { features = ["no-entrypoint"], version = "^4" }
spl-associated-token-account = { features = ["no-entrypoint"], version = "^6" }
static_assertions = "1.1.0"
steel = { features = ["spl"], version = "4.0" }
thiserror = "1.0.57"
tokio = "1.39"
tokio-postgres = "0.7"
rand = "0.8.5"

[patch.crates-io]
ore-boost-api = { git = "https://github.com/regolith-labs/ore-boost", rev = "8656721" }

[profile.release]
overflow-checks = true

[profile.dev]
overflow-checks = true
