[package]
name = "ore-pool-migration"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
async-trait = "0.1.86"
bincode.workspace = true
env_logger = "0.11.6"
futures.workspace = true
helius = "0.2.4"
log.workspace = true
ore-api = { workspace = true }
ore-boost-api = { workspace = true }
ore-pool-api = { workspace = true }
ore-pool-types = { workspace = true }
rand = "0.9.0"
reqwest = "0.12.12"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
solana-account-decoder = "2.1.12"
solana-client.workspace = true
solana-sdk.workspace = true
steel.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
url = "2.5.4"