[package]
name = "ore-pool-program"
description = "A program to coordinate ORE mining pools"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []

[dependencies]
bytemuck.workspace = true
drillx.workspace = true
ore-api.workspace = true
ore-boost-api.workspace = true
ore-pool-api.workspace = true
solana-program.workspace = true
spl-token.workspace = true
spl-associated-token-account.workspace = true
steel.workspace = true

[dev-dependencies]
rand = { workspace = true }
