[package]
name = "ore-pool-server"
version = "0.0.1"
edition = "2021"

[dependencies]
actix-cors = { workspace = true }
actix-web = { workspace = true }
base64 = { workspace = true }
bincode = { workspace = true }
bytemuck = { workspace = true }
deadpool-postgres = { workspace = true }
drillx = { workspace = true }
env_logger = { workspace = true }
futures = { workspace = true }
futures-channel = { workspace = true }
futures-util = { workspace = true }
log = { workspace = true }
ore-api = { workspace = true }
ore-boost-api = { workspace = true }
ore-pool-api = { workspace = true }
ore-pool-types = { workspace = true }
postgres-types = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha3 = { workspace = true }
solana-client = { workspace = true }
solana-sdk = { workspace = true }
solana-transaction-status = { workspace = true }
steel = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-postgres = { workspace = true }
rand = "0.8.5"
