[package]
name = "ore-pool-types"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true

[dependencies]
drillx.workspace = true
serde.workspace = true
solana-sdk.workspace = true
